--- a/MDK-ARM/ADC_USART/ADC_USART.build_log.htm
+++ b/MDK-ARM/ADC_USART/ADC_USART.build_log.htm
@@ -28,15 +28,13 @@ Project File Date:  07/01/2020
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'ADC_USART'
 compiling main.c...
-../Src/main.c(351): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
+../Src/main.c(344): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
   	sprintf(buffer,"%2.2f\r\n",value);
-../Src/main.c(352): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const char *"
-  	len=strlen(buffer);
-../Src/main.c: 2 warnings, 0 errors
+../Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=10896 RO-data=292 RW-data=24 ZI-data=3568  
+Program Size: Code=10872 RO-data=292 RW-data=20 ZI-data=3572  
 FromELF: creating hex file...
-"ADC_USART\ADC_USART.axf" - 0 Error(s), 2 Warning(s).
+"ADC_USART\ADC_USART.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -59,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
