--- a/MDK-ARM/ADC_USART/ADC_USART.build_log.htm
+++ b/MDK-ARM/ADC_USART/ADC_USART.build_log.htm
@@ -27,12 +27,32 @@ Project File Date:  07/01/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'ADC_USART'
+assembling startup_stm32f103xb.s...
+compiling stm32f1xx_it.c...
 compiling main.c...
 ../Src/main.c(357): warning:  #223-D: function "abs" declared implicitly
   	Voltage = (abs(value1-value2)*3.3)/4095;
 ../Src/main.c(358): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
   	sprintf(buffer,"%2.2f\r\n",Voltage);
 ../Src/main.c: 2 warnings, 0 errors
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_adc_ex.c...
+compiling stm32f1xx_hal_adc.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_tim.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_uart.c...
 linking...
 Program Size: Code=10924 RO-data=292 RW-data=28 ZI-data=5572  
 FromELF: creating hex file...
@@ -59,7 +79,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:14
 </pre>
 </body>
 </html>
