--- a/MDK-ARM/ADC_USART/ADC_USART.build_log.htm
+++ b/MDK-ARM/ADC_USART/ADC_USART.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.30.0.0
 Copyright (C) 2020 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: moji hedar, LDM.co, LIC=7YK12-9W8JU-E0XN4-F2IXQ-MK3D6-IZBQ3
+License Information: S.Motlaq ., ldm, LIC=4ZLII-TRSAP-LS4YN-Y0H1G-F78GS-U9RY5
  
 Tool Versions:
 Toolchain:       MDK-ARM Professional  Version: 5.30.0.0
@@ -21,42 +21,39 @@ Target DLL:      Segger\JL2CM3.dll V2.99.38.0
 Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
-C:\Users\LDM\Desktop\Salman\ADC_USART\MDK-ARM\ADC_USART.uvprojx
-Project File Date:  07/01/2020
+D:\ac\Projects\ARM\STM32F103\ADC_USART\MDK-ARM\ADC_USART.uvprojx
+Project File Date:  07/02/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'ADC_USART'
 assembling startup_stm32f103xb.s...
-compiling stm32f1xx_it.c...
 compiling main.c...
 ../Src/main.c(357): warning:  #223-D: function "abs" declared implicitly
-  	Voltage = (abs(value1-value2)*3.3)/4095;
-../Src/main.c(358): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
-  	sprintf(buffer,"%2.2f\r\n",Voltage);
-../Src/main.c: 2 warnings, 0 errors
-compiling stm32f1xx_hal_msp.c...
+  	Voltage = abs(value1-value2);
+../Src/main.c(358): error:  #167: argument of type "uint32_t *" is incompatible with parameter of type "uint8_t *"
+  	HAL_UART_Transmit(&huart1, &Voltage, 6, 500);
+../Src/main.c: 1 warning, 1 error
 compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_adc_ex.c...
 compiling stm32f1xx_hal_adc.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash.c...
 compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_uart.c...
-linking...
-Program Size: Code=10924 RO-data=292 RW-data=28 ZI-data=5572  
-FromELF: creating hex file...
-"ADC_USART\ADC_USART.axf" - 0 Error(s), 2 Warning(s).
+compiling stm32f1xx_hal_tim.c...
+"ADC_USART\ADC_USART.axf" - 1 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -73,13 +70,14 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_ADC_USART
-  C:\Users\LDM\AppData\Local\Arm\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
-  C:\Users\LDM\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
+  C:\Users\ASUS\AppData\Local\Arm\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
+  C:\Users\ASUS\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:14
+Target not created.
+Build Time Elapsed:  00:00:11
 </pre>
 </body>
 </html>
