--- a/MDK-ARM/ADC_USART/ADC_USART.build_log.htm
+++ b/MDK-ARM/ADC_USART/ADC_USART.build_log.htm
@@ -27,33 +27,11 @@ Project File Date:  07/02/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'ADC_USART'
-assembling startup_stm32f103xb.s...
 compiling main.c...
-../Src/main.c(357): warning:  #223-D: function "abs" declared implicitly
-  	Voltage = abs(value1-value2);
-../Src/main.c(358): error:  #167: argument of type "uint32_t *" is incompatible with parameter of type "uint8_t *"
-  	HAL_UART_Transmit(&huart1, &Voltage, 6, 500);
-../Src/main.c: 1 warning, 1 error
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_it.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_adc_ex.c...
-compiling stm32f1xx_hal_adc.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling stm32f1xx_hal_uart.c...
-compiling stm32f1xx_hal_tim.c...
-"ADC_USART\ADC_USART.axf" - 1 Error(s), 1 Warning(s).
+linking...
+Program Size: Code=7044 RO-data=292 RW-data=28 ZI-data=5468  
+FromELF: creating hex file...
+"ADC_USART\ADC_USART.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -76,8 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Target not created.
-Build Time Elapsed:  00:00:11
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
